src/objects/ExternalSystemPicklistEntry__c.object
<CustomObject>
    <fields>
        <fullName>ExternalPicklistLabel__c</fullName>
        <label>External Picklist Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalSystemField__c</fullName>
        <label>External System Field</label>
        <referenceTo>ExternalSystemField__c</referenceTo>
        <relationshipName>ExternalPicklistEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalSystemLink__c</fullName>
        <formula>HYPERLINK(ExternalSystemField__r.ExternalSystemPackage__r.ExternalSystem__c, ExternalSystemField__r.ExternalSystemPackage__r.ExternalSystem__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalSystemPackageLink__c</fullName>
        <formula>HYPERLINK(ExternalSystemField__r.ExternalSystemPackage__c, ExternalSystemField__r.ExternalSystemPackage__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External System Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>OR(
    TEXT(Status__c) == &apos;Not Used&apos;,
    TEXT(Status__c) == &apos;Done&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInScope__c</fullName>
        <formula>OR(
    IsClosed__c = false,
    TEXT(Status__c) = &apos;Done&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInUse__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is In Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MappedField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mapped Field</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MetadataField__c.MetadataSObject__c</field>
                <operation>equals</operation>
                <valueField>$Source.MappedSObject__c</valueField>
            </filterItems>
            <filterItems>
                <field>MetadataField__c.Type__c</field>
                <operation>equals</operation>
                <value>MultiPicklist, Picklist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MetadataField__c</referenceTo>
        <relationshipLabel>External System Picklist Entries</relationshipLabel>
        <relationshipName>ExternalPicklistEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MappedPicklistEntry__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mapped Picklist Entry</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.MappedField__c</field>
                <operation>equals</operation>
                <valueField>MetadataPicklistEntry__c.MetadataField__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MetadataPicklistEntry__c</referenceTo>
        <relationshipName>ExternalPicklistEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MappedSObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapped SObject</label>
        <referenceTo>MetadataSObject__c</referenceTo>
        <relationshipName>ExternalPicklistEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>External System Picklist Entry</label>
    <nameField>
        <label>External Picklist Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External System Picklist Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>